--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "lint": "tsc",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
